--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 .app__title {
   text-align: center;
 }
+
+.app__footer {
+  width: 100%;
+  position: absolute;
+  bottom: 2px;
+}
+
+.app__footer-text {
+  text-align: center;
+  color: #757575;
+  font-size: 0.8rem;
+}
