--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -1,8 +1,11 @@
 .chatbox {
     width: 100%;
-    display: flex;
-    align-items: center;
     padding: 1.2em 1em;
+}
+
+.chatbot__text-container {
+    display: flex;
+    align-items: center;    
 }
 
 .chatbox--bot {
@@ -10,9 +13,13 @@
 }
 
 .chatbox__image {
-    width: 30px;
-    height: 30px;
+    width: 45px;
+    height: 45px;
     border-radius: 5px;
     margin-right: 10px;
     margin-left: 10px;
+}
+
+@media only screen and (min-width: 1280px) {
+
 }
