--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -3,7 +3,7 @@
     padding: 1.2em 1em;
 }
 
-.chatbot__text-container {
+.chatbox__text-container {
     display: flex;
     align-items: center;    
 }
@@ -20,6 +20,8 @@
     margin-left: 10px;
 }
 
-@media only screen and (min-width: 1280px) {
-
+@media only screen and (min-width: 768px) {
+    .chatbox__text {
+        font-size: 1.8rem;
+    }
 }
