--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -25,3 +25,9 @@
         font-size: 1.8rem;
     }
 }
+
+@media only screen and (min-width: 1280px) {
+    .chatbox__text {
+        font-size: 1rem;
+    }
+}
