--- a/src/components/TextField/TextField.css
+++ b/src/components/TextField/TextField.css
@@ -18,7 +18,7 @@
 
 .textfield__icon {
     font-size: 1.5rem;
-    margin-left: 10px;
+    margin-left: 12px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -33,6 +33,7 @@
 
 @media only screen and (min-width: 1280px) {
     .textfield {
+        width: 40%;
         font-size: 1rem;
     }
 
