--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -27,6 +27,10 @@
 }
 
 @media only screen and (min-width: 1280px) {
+    .chatbox {
+        width: 97.5%;
+    }
+
     .chatbox__text {
         font-size: 1rem;
     }
